--- a/static/styles/covid19.css
+++ b/static/styles/covid19.css
@@ -23,3 +23,17 @@ h4 {
   margin-left: 20px;
 
 }
+
+h5 {
+  color: DodgerBlue;
+  margin-left: 20px;
+ 
+
+}
+
+h6 {
+  color: Gray;
+  margin-left: 20px;
+ 
+
+}
